unpackaged/main/default/objects/footprint__FootPrint__c/fields/footprint__EmailMe__c.field-meta.xml
<CustomField>
    <fullName>footprint__EmailMe__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EmailMe</label>
    <type>Checkbox</type>
</CustomField>