unpackaged/main/default/objects/footprint__FootPrint__c/fields/footprint__FootPrint_Fields__c.field-meta.xml
<CustomField>
    <fullName>footprint__FootPrint_Fields__c</fullName>
    <label>Fields</label>
    <summaryForeignKey>footprint__Footprint_Line_Item__c.footprint__Footprint_Line_Items_Object_Analysis__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>