unpackaged/main/default/objects/footprint__FootPrint__c/fields/footprint__FootPrint_Object_Label__c.field-meta.xml
<CustomField>
    <fullName>footprint__FootPrint_Object_Label__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Object Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>