unpackaged/main/default/objects/footprint__FootPrint__c/fields/footprint__FootPrint_Record_Types__c.field-meta.xml
<CustomField>
    <fullName>footprint__FootPrint_Record_Types__c</fullName>
    <label>Record Types</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>