unpackaged/main/default/objects/footprint__FootPrint__c/fields/footprint__MaxRange__c.field-meta.xml
<CustomField>
    <fullName>footprint__MaxRange__c</fullName>
    <defaultValue>100</defaultValue>
    <label>MaxRange</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>