unpackaged/main/default/objects/footprint__FootPrint__c/fields/footprint__MinRange__c.field-meta.xml
<CustomField>
    <fullName>footprint__MinRange__c</fullName>
    <defaultValue>0</defaultValue>
    <label>MinRange</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>