unpackaged/main/default/objects/footprint__FootPrint__c/fields/footprint__RangeSelected__c.field-meta.xml
<CustomField>
    <fullName>footprint__RangeSelected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RangeSelected</label>
    <type>Checkbox</type>
</CustomField>