unpackaged/main/default/objects/footprint__FootPrint__c/fields/footprint__reports__c.field-meta.xml
<CustomField>
    <fullName>footprint__reports__c</fullName>
    <defaultValue>false</defaultValue>
    <label>reports</label>
    <type>Checkbox</type>
</CustomField>