unpackaged/main/default/objects/footprint__FootPrint__c/fields/footprint__VR__c.field-meta.xml
<CustomField>
    <fullName>footprint__VR__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The user's choice to include validation rules</description>
    <label>Include Validation rules</label>
    <type>Checkbox</type>
</CustomField>