unpackaged/main/default/objects/footprint__FootPrint__c/fields/footprint__WF__c.field-meta.xml
<CustomField>
    <fullName>footprint__WF__c</fullName>
    <defaultValue>false</defaultValue>
    <description>the user's choice to include workflow rules and field updates in the analysis</description>
    <label>Include Workflows</label>
    <type>Checkbox</type>
</CustomField>