unpackaged/main/default/objects/footprint__FootPrint__c/validationRules/footprint__FP_BlockEdit.validationRule-meta.xml
<ValidationRule>
    <fullName>footprint__FP_BlockEdit</fullName>
    <active>false</active>
    <errorConditionFormula>PRIORVALUE( footprint__FootPrint_Filter__c ) != footprint__FootPrint_Filter__c</errorConditionFormula>
    <errorDisplayField>footprint__FootPrint_Filter__c</errorDisplayField>
    <errorMessage>You cannot edit This field</errorMessage>
</ValidationRule>